# terraform-provider-dataminded

./: .gitignore  .gitpod.Dockerfile  .gitpod.yml  .golangci.yml  GNUmakefile  README.md  chapter_config.yaml  config.yaml  go.mod  go.sum  main.go  main.tf
.github/workflows/: test.yml
api/: .dockerignore  Cargo.toml  Dockerfile  Makefile
api/src/: error.rs  main.rs  model.rs
api/src/model/: chapter.rs  chapter_member.rs  user.rs
api/src/routes/: chapter.rs  chapter_member.rs  user.rs
backend/: Cargo.toml
backend/migrations/2024-03-24-081846_create_users/: up.sql
backend/migrations/2024-03-24-103555_create_chapters/: up.sql
backend/migrations/2024-03-24-103639_create_chapter_members/: up.sql
backend/src/: error.rs  main.rs  schema.rs
backend/src/model/: chapter.rs  chapter_member.rs  user.rs
backend/src/routes/: chapter.rs  chapter_member.rs  mod.rs  user.rs
docs/: index.md
docs/functions/: chapter_config_parser.md
docs/resources/: chapter.md  chapter_member.md  user.md
example/: main.tf
examples/: .gitignore
examples/provider/: provider.tf
examples/resources/: dataminded_chapter.tf  dataminded_chapter_member.tf  dataminded_user.tf
internal/acceptance/: data.go  setup.go
internal/client/: client.go
internal/dataminded_api/: chapter.go  chapter_member.go  chapter_member_test.go  chapter_test.go  connection.go  constants.go  user.go  user_test.go
internal/logging/: diagnostics.go
internal/provider/: main.go  provider.go
internal/services/chapter/: README.md  chapter_resource.go  chapter_resource_test.go  main.go
(+10 files in other folders)
