[package]
name = "data-minded"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aide = { version = "0.13.4", features = ["axum", "redoc", "macros", "scalar"] }
axum = { version = "0.7.4", features = ["tokio"] }
axum-jsonschema = "0.8.0"
axum-macros = "0.4.1"
diesel = { version = "2.1.5", features = [
    "sqlite",
    "r2d2",
    "returning_clauses_for_sqlite_3_35",
] }
diesel_migrations = "2.1.0"
libsqlite3-sys = { version =  "0.25.2", features = [
    "bundled",
] }
schemars = "0.8.16"
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.115"
libsqlite3-sys = "0.28.0"
tokio = { version = "1.36.0", features = ["macros", "rt-multi-thread"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
